<resources>
    <string name="app_name">SFU Lounge</string>
    <string name="title_profile">Profile</string>
    <string name="title_explore">Explore</string>
    <string name="title_chats">Chats</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_password_confirm">Confirm Password</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in">Log in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="invalid_password_confirm">Confirmed password must match</string>
    <string name="login_failed">"Login failed"</string>
    <string name="register_failed">"Register failed"</string>

    <!--  notifications  -->
    <string name="notification_channel_name">SFULounge Channel</string>
    <string name="notification_channel_description">Messages</string>
    <string name="notification_foreground_title">SFU Lounge</string>
    <string name="notification_foreground_description">Messages Notification Service</string>

    <!--  error messages  -->
    <string name="error_message_account_unverified">Account not email verified</string>
    <string name="error_message_existing_account">Account with same email already exists</string>
    <string name="error_message_verification_failed_to_send">Verification email failed to send</string>
    <string name="error_message_unknown_reason">Oops! Something went wrong</string>
    <string name="error_message_user_profile_failed_to_update">update user profile failed</string>
    <string name="error_message_failed_to_get_url">failed to get download url</string>
    <string name="error_message_upload_photo">failed to upload photo</string>
    <string name="error_message_delete_photo">failed to delete photo</string>
    <string name="error_message_initialize_profile">failed to initialize user profile</string>
    <string name="error_message_recovery">recovery error</string>
    <string name="error_message_get_users">failed to get users</string>
    <string name="error_message_create_chat_room">failed to create chat room</string>
    <string name="error_message_name_is_null">name is null</string>
    <string name="error_message_gender_is_null">gender is null</string>
    <string name="error_message_message_send">Message failed to send</string>
    <string name="error_message_update_personality">Failed to update personality type</string>
    <string name="error_message_get_messages">Failed to get messages</string>

    <!--  success messages  -->
    <string name="success_message_profile_saved">Profile saved!</string>
    <string name="success_message_logout">Sign out successful!</string>

    <!--  confirm dialog  -->
    <string name="confirm_logout">
        Are you sure you want to logout? All notifications for this account will be cleared.
    </string>

    <!--  dialog for messages  -->
    <string name="messages_upload_dialog_title">Upload Additional Items</string>

    <!-- Strings related to login -->
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_setup_basic_info">SetupBasicInfoActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="save">Save</string>
    <string name="previous">Previous</string>

    <!--  email verification activity  -->
    <string name="title_email_verification">
        Please check your email to verify your account.\n\n\n Did not receive email?
    </string>
    <string name="action_resend_email">Resend verification email</string>
    <string name="verification_email_failed">Failed to send verification email</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="btn_continue">Continue</string>
    <string name="let_s_get_started">Let\'s get started!</string>
    <string name="the_social_hub_for_sfu_students">The Social Hub for SFU Students</string>
    <string name="error_message_fetch_users">Unable to fetch users \n</string>
    <string name="action_next">Next</string>
    <string name="content_description_profile_picture">profile picture</string>
    <string name="error_message_swipe_query_failed">Cannot Query the swipe database failure found\n(note: this is not a NOT_FOUND err)</string>
    <string name="profile_gender_male">Male</string>
    <string name="profile_gender_female">Female</string>
    <string name="profile_gender_other">Other</string>
    <string name="profile_gender_unspecified">Prefer not to say</string>
    <string name="profile_gender_label">Change your gender</string>
    <string name="profile_name_hint">e.g. Frank</string>
    <string name="profile_name_label">Change your first name</string>
    <string name="profile_description">You can edit your profile info here!</string>
    <string name="profile_header">Settings</string>
    <string name="profile_show_gender_label">Don\'t show my gender on my profile</string>
    <string name="profile_edit_images_label">Edit images</string>
    <string name="profile_edit_interests_label">Edit interests</string>
    <string name="profile_edit_depth_questions_label">Edit depth questions</string>


    <!--interest tags-->
    <string name="social_impact_and_volunteering">Social Impact and Volunteering</string>
    <string name="philosophy">Philosophy</string>
    <string name="science_fiction_and_fantasy">Science Fiction and Fantasy</string>
    <string name="astronomy">Astronomy</string>
    <string name="history_and_archaeology">History and Archaeology</string>
    <string name="science">Science</string>
    <string name="coffee_and_tea">Coffee and Tea</string>
    <string name="wine_and_beer">Wine and Beer</string>
    <string name="food">Food</string>
    <string name="meditation_and_mindfulness">Meditation and Mindfulness</string>
    <string name="fitness_and_workout">Fitness and Workout</string>
    <string name="theater_and_performing_arts">Theater and Performing Arts</string>
    <string name="yoga">Yoga</string>
    <string name="comedy">Comedy</string>
    <string name="anime_and_cosplay">Anime and Cosplay</string>
    <string name="languages">Languages</string>
    <string name="board_games">Board Games</string>
    <string name="movies_and_tv_shows">Movies and TV Shows</string>
    <string name="fashion">Fashion</string>
    <string name="gardening">Gardening</string>
    <string name="diy_and_crafting">DIY and Crafting</string>
    <string name="baking">Baking</string>
    <string name="hiking">Hiking</string>
    <string name="travel">Travel</string>
    <string name="camping">Camping</string>
    <string name="running">Running</string>
    <string name="biking">Biking</string>
    <string name="boating">Boating</string>
    <string name="skiing_and_snowboarding">Skiing and Snowboarding</string>
    <string name="cooking">Cooking</string>
    <string name="photography">Photography</string>
    <string name="gaming">Gaming</string>
    <string name="reading">Reading</string>
    <string name="music">Music</string>
    <string name="art_and_painting">Art and Painting</string>
    <string name="dancing">Dancing</string>
    <string name="writing">Writing</string>
    <string name="interests_prompt">Let other\'s know what you\'re into</string>
    <string name="interests_title">Interests</string>
    <string name="profile_logout">Logout</string>

    <!--  personality types  -->
    <string name="personality_free_spirited_dreamer">Free-Spirited Dreamer</string>
    <string name="personality_compassionate_helper">Compassionate Helper</string>
    <string name="personality_organized_helper">Organized Helper</string>
    <string name="personality_adventurous_explorer">Adventurous Explorer</string>
    <string name="personality_reserved_thinker">Reserved Thinker</string>
    <string name="swipe_left">Swipe Left</string>
    <string name="swipe_right">Swipe Right</string>
    <string name="action_finish">Finish</string>
    <string name="depth_questions_title">Depth Questions</string>
    <string name="user_profile_interests_label">Interests</string>
    <string name="user_profile_more_about_me_label">More about me</string>

    <!--  chats fragment  -->
    <string name="chats_fragment_no_chats">No chats</string>
    <string name="email_not_sfu_error_msg">Email must end with @sfu.ca</string>
</resources>