<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.setup.SetupInterestsActivity"
    android:background="@drawable/bg_register_info">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:gravity="center"
            android:textStyle="bold"
            android:text="Interests"
            android:textColor="#000000"/>

        <TextView
            android:id="@+id/subtext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:gravity="center"
            android:text="Let other's know what you're into"
            app:layout_constraintTop_toBottomOf="@id/textview"
            android:textColor="#000000"/>

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chip_group_choice"
            android:layout_width="396dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/subtext">

            <com.google.android.material.chip.Chip
                android:id="@+id/Hiking"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hiking"
                app:chipBackgroundColor="#FFFFFF"/>

            <com.google.android.material.chip.Chip
                android:id="@+id/Travel"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/travel"
                app:chipBackgroundColor="#FFFFFF"/>

            <com.google.android.material.chip.Chip
                android:id="@+id/Camping"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/camping"
                app:chipBackgroundColor="#FFFFFF"/>

            <com.google.android.material.chip.Chip
                android:id="@+id/Running"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/running"
                app:chipBackgroundColor="#FFFFFF"/>
            <com.google.android.material.chip.Chip
                android:id="@+id/Biking"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/biking"
                app:chipBackgroundColor="#FFFFFF"/>
            <com.google.android.material.chip.Chip
                android:id="@+id/Boating"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/boating"
                app:chipBackgroundColor="#FFFFFF"/>
            <com.google.android.material.chip.Chip
                android:id="@+id/SkiingSnowboarding"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/skiing_and_snowboarding"
                app:chipBackgroundColor="#FFFFFF"/>
            <com.google.android.material.chip.Chip
                android:id="@+id/Cooking"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cooking"
                app:chipBackgroundColor="#FFFFFF"/>
            <com.google.android.material.chip.Chip
                android:id="@+id/Photography"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/photography"
                app:chipBackgroundColor="#FFFFFF"/>
            <com.google.android.material.chip.Chip
                android:id="@+id/Gaming"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gaming"
                app:chipBackgroundColor="#FFFFFF"/>
            <com.google.android.material.chip.Chip
                android:id="@+id/Reading"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reading"
                app:chipBackgroundColor="#FFFFFF"/>
            <com.google.android.material.chip.Chip
                android:id="@+id/Music"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/music"
                app:chipBackgroundColor="#FFFFFF"/>
            <com.google.android.material.chip.Chip
                android:id="@+id/ArtPainting"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/art_and_painting"
                app:chipBackgroundColor="#FFFFFF"/>
            <com.google.android.material.chip.Chip
                android:id="@+id/Dancing"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dancing"
                app:chipBackgroundColor="#FFFFFF"/>
            <com.google.android.material.chip.Chip
                android:id="@+id/Writing"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/writing"
                app:chipBackgroundColor="#FFFFFF"/>
            <com.google.android.material.chip.Chip
                android:id="@+id/Baking"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/baking"
                app:chipBackgroundColor="#FFFFFF"/>
            <com.google.android.material.chip.Chip
                android:id="@+id/DIY"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/diy_and_crafting"
                app:chipBackgroundColor="#FFFFFF"/>
            <com.google.android.material.chip.Chip
                android:id="@+id/Gardening"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gardening"
                app:chipBackgroundColor="#FFFFFF"/>
            <com.google.android.material.chip.Chip
                android:id="@+id/Fashion"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fashion"
                app:chipBackgroundColor="#FFFFFF"/>
            <com.google.android.material.chip.Chip
                android:id="@+id/MoviesTV"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/movies_and_tv_shows"
                app:chipBackgroundColor="#FFFFFF"/>
            <com.google.android.material.chip.Chip
                android:id="@+id/BoardGames"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/board_games"
                app:chipBackgroundColor="#FFFFFF"/>
            <com.google.android.material.chip.Chip
                android:id="@+id/Languages"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/languages"
                app:chipBackgroundColor="#FFFFFF"/>
            <com.google.android.material.chip.Chip
                android:id="@+id/AnimeCosplay"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/anime_and_cosplay"
                app:chipBackgroundColor="#FFFFFF"/>
            <com.google.android.material.chip.Chip
                android:id="@+id/Comedy"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/comedy"
                app:chipBackgroundColor="#FFFFFF"/>
            <com.google.android.material.chip.Chip
                android:id="@+id/Yoga"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yoga"
                app:chipBackgroundColor="#FFFFFF"/>
            <com.google.android.material.chip.Chip
                android:id="@+id/TheaterPerformingArts"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/theater_and_performing_arts"
                app:chipBackgroundColor="#FFFFFF"/>
            <com.google.android.material.chip.Chip
                android:id="@+id/FitnessWorkout"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fitness_and_workout"
                app:chipBackgroundColor="#FFFFFF"/>
            <com.google.android.material.chip.Chip
                android:id="@+id/MeditationMindfulness"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/meditation_and_mindfulness"
                app:chipBackgroundColor="#FFFFFF"/>
            <com.google.android.material.chip.Chip
                android:id="@+id/Food"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/food"
                app:chipBackgroundColor="#FFFFFF"/>
            <com.google.android.material.chip.Chip
                android:id="@+id/WineBeer"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wine_and_beer"
                app:chipBackgroundColor="#FFFFFF"/>
            <com.google.android.material.chip.Chip
                android:id="@+id/CoffeeTea"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/coffee_and_tea"
                app:chipBackgroundColor="#FFFFFF"/>
            <com.google.android.material.chip.Chip
                android:id="@+id/Science"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/science"
                app:chipBackgroundColor="#FFFFFF"/>
            <com.google.android.material.chip.Chip
                android:id="@+id/HistoryArchaeology"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/history_and_archaeology"
                app:chipBackgroundColor="#FFFFFF"/>
            <com.google.android.material.chip.Chip
                android:id="@+id/Astronomy"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/astronomy"
                app:chipBackgroundColor="#FFFFFF"/>
            <com.google.android.material.chip.Chip
                android:id="@+id/ScienceFictionFantasy"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/science_fiction_and_fantasy"
                app:chipBackgroundColor="#FFFFFF"/>
            <com.google.android.material.chip.Chip
                android:id="@+id/Philosophy"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/philosophy"
                app:chipBackgroundColor="#FFFFFF"/>
            <com.google.android.material.chip.Chip
                android:id="@+id/SocialImpactVolunteering"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/social_impact_and_volunteering"
                app:chipBackgroundColor="#FFFFFF"/>
        </com.google.android.material.chip.ChipGroup>

        <Button
            android:id="@+id/next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:layout_marginBottom="8dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/next"
            android:backgroundTint="@color/button_orange"/>

    </LinearLayout>

</ScrollView>